// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Meta renders 1`] = `
<div>
  <meta
    content="en_US"
    property="og:locale"
  />
  <meta
    content="website"
    property="og:type"
  />
  <meta
    content="Blitz"
    property="og:site_name"
  />
  <meta
    content="@blitz_js"
    name="twitter:site"
  />
  <title>
    Blitz
  </title>
  <meta
    content="Blitz"
    property="og:title"
  />
  <meta
    content="Blitz"
    name="twitter:title"
  />
  <meta
    content="#6700eb"
    name="theme-color"
  />
  <meta
    content="#6700eb"
    name="msapplication-TileColor"
  />
  <link
    color="#6700eb"
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/safari-pinned-tab.svg"
    rel="mask-icon"
  />
  <link
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />
  <link
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />
  <link
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />
  <link
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/site.webmanifest"
    rel="manifest"
  />
</div>
`;

exports[`Meta renders custom color 1`] = `
<div>
  <meta
    content="en_US"
    property="og:locale"
  />
  <meta
    content="website"
    property="og:type"
  />
  <meta
    content="Blitz"
    property="og:site_name"
  />
  <meta
    content="@blitz_js"
    name="twitter:site"
  />
  <title>
    Blitz
  </title>
  <meta
    content="Blitz"
    property="og:title"
  />
  <meta
    content="Blitz"
    name="twitter:title"
  />
  <meta
    content="#fff"
    name="theme-color"
  />
  <meta
    content="#fff"
    name="msapplication-TileColor"
  />
  <link
    color="#fff"
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/safari-pinned-tab.svg"
    rel="mask-icon"
  />
  <link
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />
  <link
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />
  <link
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />
  <link
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/site.webmanifest"
    rel="manifest"
  />
</div>
`;

exports[`Meta renders custom title 1`] = `
<div>
  <meta
    content="en_US"
    property="og:locale"
  />
  <meta
    content="website"
    property="og:type"
  />
  <meta
    content="Blitz"
    property="og:site_name"
  />
  <meta
    content="@blitz_js"
    name="twitter:site"
  />
  <title>
    Custom Title – Blitz
  </title>
  <meta
    content="Custom Title – Blitz"
    property="og:title"
  />
  <meta
    content="Custom Title – Blitz"
    name="twitter:title"
  />
  <meta
    content="#6700eb"
    name="theme-color"
  />
  <meta
    content="#6700eb"
    name="msapplication-TileColor"
  />
  <link
    color="#6700eb"
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/safari-pinned-tab.svg"
    rel="mask-icon"
  />
  <link
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />
  <link
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />
  <link
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />
  <link
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/site.webmanifest"
    rel="manifest"
  />
</div>
`;

exports[`Meta renders image 1`] = `
<div>
  <meta
    content="en_US"
    property="og:locale"
  />
  <meta
    content="website"
    property="og:type"
  />
  <meta
    content="Blitz"
    property="og:site_name"
  />
  <meta
    content="@blitz_js"
    name="twitter:site"
  />
  <title>
    Blitz
  </title>
  <meta
    content="Blitz"
    property="og:title"
  />
  <meta
    content="Blitz"
    name="twitter:title"
  />
  <meta
    content="https://via.placeholder.com/1024x512"
    property="og:image"
  />
  <meta
    content="summary_large_image"
    name="twitter:card"
  />
  <meta
    content="https://via.placeholder.com/1024x512"
    name="twitter:image"
  />
  <meta
    content="#6700eb"
    name="theme-color"
  />
  <meta
    content="#6700eb"
    name="msapplication-TileColor"
  />
  <link
    color="#6700eb"
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/safari-pinned-tab.svg"
    rel="mask-icon"
  />
  <link
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/apple-touch-icon.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />
  <link
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/favicon-32x32.png"
    rel="icon"
    sizes="32x32"
    type="image/png"
  />
  <link
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/favicon-16x16.png"
    rel="icon"
    sizes="16x16"
    type="image/png"
  />
  <link
    href="https://raw.githubusercontent.com/blitz-js/blitz/canary/favicons/site.webmanifest"
    rel="manifest"
  />
</div>
`;
